--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -97,6 +97,7 @@
 		var scene = new THREE.Scene();
 			scene.background = new THREE.Color( 'skyblue' );
 			scene.add( new THREE.AmbientLight( 0x404040 ) );
+			//scene.add( new THREE.AmbientLight( 0x404040 ) );
 
 		var camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 4*GROUND_SIZE );
 			camera.position.set( 10*GROUND_SIZE, 3*GROUND_SIZE, 10*GROUND_SIZE );
@@ -105,20 +106,28 @@
 			camera.position.set( GROUND_SIZE/2, GROUND_SIZE/10, GROUND_SIZE/3 );
 			//camera.position.set( GROUND_SIZE/1, GROUND_SIZE/4, GROUND_SIZE/1 );
 			camera.position.set( 0, 1.2*GROUND_SIZE, 0 );
-			
-		var light = new THREE.PointLight( 'white', 0.5 );
-			light.position.set( 100, 100, 0 );
-			light.castShadow = true;
+
+		var lights = [];
+for( var i=0; i<SHADOWS_COUNT; i++)
+{
+		lights[i] = new THREE.DirectionalLight( 'white', 1/3 );
+			lights[i].position.set( GROUND_EDGE, GROUND_EDGE, GROUND_EDGE );
+			//light.target = scene;
 			if( SHADOWS )
 			{
-				light.shadow.mapSize.width = SHADOW_MAP_SIZE;
-				light.shadow.mapSize.height = SHADOW_MAP_SIZE;	
-				light.shadow.camera.near = 1;
-				light.shadow.camera.far = 1000;
-				light.shadow.bias = 0.00001;
+				lights[i].castShadow = true;
+				lights[i].shadow.mapSize.width = SHADOW_MAP_SIZE<<i;
+				lights[i].shadow.mapSize.height = SHADOW_MAP_SIZE<<i;
+				lights[i].shadow.camera.near = -1000;
+				lights[i].shadow.camera.far = 1000;
+				lights[i].shadow.camera.left = -GROUND_SIZE;
+				lights[i].shadow.camera.right = GROUND_SIZE;
+				lights[i].shadow.camera.bottom = -GROUND_SIZE;
+				lights[i].shadow.camera.top = GROUND_SIZE;
+				//light.shadow.bias = 0.0001;
 			}
-			scene.add( light );
-			scene.add( new THREE.AmbientLight( 'white', 0.15 ) );
+			scene.add( lights[i] );
+}
 
 		var controls = new THREE.OrbitControls( camera, renderer.domElement );
 			controls.maxPolarAngle = Math.PI * 0.495;
@@ -218,8 +227,8 @@
 			frame++;
 			
 //			light.position.copy ( camera.position );
-//			light.position.set ( GROUND_SIZE*Math.cos(currentTimeMs/1000000), GROUND_SIZE, GROUND_SIZE*Math.sin(currentTimeMs/1000000) );
-			light.position.set ( GROUND_SIZE*Math.cos(1), GROUND_SIZE/2, GROUND_SIZE*Math.sin(1) );
+//			var angle = Math.PI/2 + Math.PI/2*Math.sin(currentTimeMs/500000);
+//			light.position.set ( GROUND_SIZE*Math.cos(angle), GROUND_SIZE*Math.sin(angle), GROUND_SIZE/6 );
 
 			//statsCalls.update( renderer.info.render.calls, 460  );
 			//statsTrigs.update( renderer.info.render.triangles, 460  );
