Removed leaking light under buildings [#9]
Light leaking under building (houses, apartments, offices) is removed by pushing the buildings slightly into the ground.

--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -108,9 +108,9 @@
 			camera.position.set( 0, 1.2*GROUND_SIZE, 0 );
 
 		var lights = [];
-for( var i=0; i<SHADOWS_COUNT; i++)
-{
-		lights[i] = new THREE.DirectionalLight( 'white', 1/3 );
+		for( var i=0; i<SHADOWS_COUNT; i++)
+		{
+			lights[i] = new THREE.DirectionalLight( 'white', 1.1/SHADOWS_COUNT );
 			lights[i].position.set( GROUND_EDGE, GROUND_EDGE, GROUND_EDGE );
 			//light.target = scene;
 			if( SHADOWS )
@@ -118,8 +118,8 @@ for( var i=0; i<SHADOWS_COUNT; i++)
 				lights[i].castShadow = true;
 				lights[i].shadow.mapSize.width = SHADOW_MAP_SIZE<<i;
 				lights[i].shadow.mapSize.height = SHADOW_MAP_SIZE<<i;
-				lights[i].shadow.camera.near = -1000;
-				lights[i].shadow.camera.far = 1000;
+				lights[i].shadow.camera.near = -10000;
+				lights[i].shadow.camera.far = 10000;
 				lights[i].shadow.camera.left = -GROUND_SIZE;
 				lights[i].shadow.camera.right = GROUND_SIZE;
 				lights[i].shadow.camera.bottom = -GROUND_SIZE;
@@ -127,7 +127,7 @@ for( var i=0; i<SHADOWS_COUNT; i++)
 				//light.shadow.bias = 0.0001;
 			}
 			scene.add( lights[i] );
-}
+		}
 
 		var controls = new THREE.OrbitControls( camera, renderer.domElement );
 			controls.maxPolarAngle = Math.PI * 0.495;
