--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -105,7 +105,7 @@
 			camera.position.set( 0.01+0*GROUND_SIZE/0.8, GROUND_SIZE*2, 0 );
 			camera.position.set( GROUND_SIZE/2, GROUND_SIZE/10, GROUND_SIZE/3 );
 			//camera.position.set( GROUND_SIZE/1, GROUND_SIZE/4, GROUND_SIZE/1 );
-			//camera.position.set( 0, 0.6*GROUND_SIZE, 0 );
+			camera.position.set( 0, 0.26*GROUND_SIZE, 0 );
 
 		
 		
