--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -104,7 +104,7 @@
 			camera.position.set( GROUND_SIZE/1.5, GROUND_SIZE/4, GROUND_SIZE/1.5 );
 			camera.position.set( 0.01+0*GROUND_SIZE/0.8, GROUND_SIZE*2, 0 );
 			camera.position.set( GROUND_SIZE/2, GROUND_SIZE/10, GROUND_SIZE/3 );
-			camera.position.set( -GROUND_SIZE/1, GROUND_SIZE/2, -GROUND_SIZE/1 );
+			camera.position.set( -GROUND_SIZE/1, GROUND_SIZE/10, -GROUND_SIZE/1 );
 			//camera.position.set( 0, 0.26*GROUND_SIZE, 0 );
 
 		
@@ -202,7 +202,7 @@
 			agents.update();
 			/*if( DEBUG_FOLLOW_AGENT<0 ) */controls.update();
 			
-			renderer.render(scene, camera);
+			if( frame%10 == 0 ) renderer.render(scene, camera);
 			
 			if (DEBUG_RENDERER_INFO && frame==10)
 			{
@@ -214,6 +214,17 @@
 				console.log( '\tpoints',renderer.info.render.points );
 				console.log( '\ttriangles',renderer.info.render.triangles );
 			}
+			/*
+			if( frame%60 == 0 )
+			{
+				var c = d = 0;
+				for( var i in blocks.allTrueBlocks )
+				{
+					d += blocks.allTrueBlocks[i].agents.length;
+					c += blocks.allTrueBlocks[i].agents.length * blocks.allTrueBlocks[i].agents.length;
+				}
+				console.log(c,'of',d*d,'i.e.', (100*c/d/d).toFixed(1)+'%' );
+			}*/
 		} //animate
 
 		animate();		
