Testing quarantine effect

--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -104,7 +104,7 @@
 			camera.position.set( GROUND_SIZE/1.5, GROUND_SIZE/4, GROUND_SIZE/1.5 );
 			camera.position.set( 0.01+0*GROUND_SIZE/0.8, GROUND_SIZE*2, 0 );
 			camera.position.set( GROUND_SIZE/2, GROUND_SIZE/10, GROUND_SIZE/3 );
-			camera.position.set( -GROUND_SIZE/1, GROUND_SIZE/10, -GROUND_SIZE/1 );
+			camera.position.set( -GROUND_SIZE/1.2, GROUND_SIZE/5, GROUND_SIZE/1.2 );
 			//camera.position.set( 0, 0.26*GROUND_SIZE, 0 );
 
 		
@@ -202,7 +202,7 @@
 			agents.update();
 			/*if( DEBUG_FOLLOW_AGENT<0 ) */controls.update();
 			
-			if( frame%3 == 0 ) renderer.render(scene, camera);
+			if( frame%6 == 0 ) renderer.render(scene, camera);
 			
 			if (DEBUG_RENDERER_INFO && frame==10)
 			{
