Converted blocks, trees and crossings to modules.

--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -49,9 +49,10 @@
 	<script src="textures/apartmentTexture.js"></script>
 	<script src="textures/crossingTexture.js"></script>
 	<script src="textures/grassTexture.js"></script>
--->
-	<!--script src="objects/ground.js"></script-->
+
+	<script src="objects/ground.js"></script>
 	<script src="objects/blocks.js"></script>
+-->
 	<script src="objects/buildings.js"></script>
 	<script src="objects/rooms.js"></script>
 	<script src="objects/elevators.js"></script>
@@ -60,8 +61,10 @@
 	<script src="objects/houseBuildings.js"></script>
 	<script src="objects/houseSidewalks.js"></script>
 	<script src="objects/apartmentBuildings.js"></script>
+<!--	
 	<script src="objects/trees.js"></script>
 	<script src="objects/crossings.js"></script>
+-->	
 	<script src="objects/nature.js"></script>
 	
 	<script src="agents/navmesh.js"></script>
@@ -130,6 +133,9 @@
 		import {Font} from './font.module.js';
 		import {Ground} from './objects/ground.module.js';
 		import {Textures} from './textures/textures.module.js';
+		import {Blocks} from './objects/blocks.module.js';
+		import {Trees} from './objects/trees.module.js';
+		import {Crossings} from './objects/crossings.module.js';
 		
 		font = new Font();
 		navmesh = new NavMesh();		//console.log('navmesh\t\t',clock.getDelta());
