Conversion into ES6 modules is complete (hopefully)

--- a/covid-19-simulator.html
+++ b/covid-19-simulator.html
@@ -23,7 +23,7 @@
 		<span id="fps"></span>
 		<span id="agents"></span>
 	<div>
-
+<!--
 	<script src="js/three.min.js"></script>
 	<script src="js/dat.gui.min.js"></script>
 	<script src="js/LineSegments2.js"></script>
@@ -31,13 +31,14 @@
 	<script src="js/Line2.js"></script>
 	<script src="js/LineGeometry.js"></script>
 	<script src="js/LineMaterial.js"></script>
-	<!--script src="js/stats.min.js"></script-->
 	<script src="js/dat.gui.min.js"></script>
-	<script src="js/perlin.js"></script>
+-->	
+	<script src="js/perlin.js"></script> <!-- from: https://github.com/joeiddon/perlin -->
 	<script src="js/seedrandom.min.js"></script> <!-- from: https://github.com/davidbau/seedrandom -->
+	<!--script src="js/stats.min.js"></script-->
 	
 	<script type="module">
-		import './main.module.js';
+		import './main.js';
 	</script>
 	
 </body>
