--- a/agents/obj-to-agent.html
+++ b/agents/obj-to-agent.html
@@ -105,6 +105,11 @@
 			if( v.y>=HEAD_Y )
 				return '1, ';
 				
+			// hands
+			//if( Math.abs(v.x)>=0.10 && v.y>=0.50 || Math.abs(v.x)>=0.12)
+			if( (Math.abs(v.x)>=0.09 && v.y>=0.55) || (Math.abs(v.x)>=0.14 && v.y>=0.30) )
+				return '5, ';
+
 			// neck
 			if( v.y>=NECK_Y )
 				return '2, ';
@@ -112,6 +117,18 @@
 			// belly
 			if( v.y>=BODY_Y && Math.abs(v.x)<=SHOULDER_X && v.z>=0)
 				return '3, ';
+			
+			// feet
+			if( v.y<=0.08 )
+				return '8, ';
+
+			// knees
+			if( v.y<=0.30 )
+				return '7, ';
+
+			// legs
+			if( Math.abs(v.x)>=0.01 && Math.abs(v.x)<=0.17 && v.y<=0.49 )
+				return '6, ';
 			
 			// undefined
 			return '0, ';
@@ -161,7 +178,8 @@
 		topologyData = topologyData.slice(0, -2); // remove last ", "
 		topologyData += '];<br><br>';
 		
-		document.getElementById('code').innerHTML = vertexData + normalData + /*textureData +*/ topologyData;
+//		document.getElementById('code').innerHTML = vertexData + normalData + /*textureData +*/ topologyData;
+		document.getElementById('code').innerHTML = topologyData;
 	</script>
 </body>
 </html>
